# Sources/UserGateway/Controllers/AccountController.swift
@@ -88,156 +88,6 @@ struct AccountController: UserGatewayAccountInterface {
         }
     }
 
-    func update(
-        _ id: ID<User.Account>,
-        _ input: UserGateway.Account.Update
-    ) async throws -> UserGateway.Account.Detail {
-        let ret =
-            try await accountClient.updateUserGatewayAccounts(
-                .init(
-                    path: .init(accountId: id.rawValue),
-                    body: .json(
-                        .init(
-                            email: input.email,
-                            password: input.password,
-                            roleKeys: input.roleKeys.map { $0.rawValue }
-                        )
-                    )
-                )
-            )
-
-        switch ret {
-        case .ok(let response):
-            switch response.body {
-            case .json(let data):
-                return .init(
-                    id: .init(rawValue: data.id),
-                    email: data.email,
-                    firstName: data.firstName,
-                    lastName: data.lastName,
-                    imageKey: data.imageKey,
-                    position: data.position,
-                    publicEmail: data.publicEmail,
-                    phone: data.phone,
-                    web: data.web,
-                    lat: data.lat,
-                    lon: data.lon,
-                    lastLocationUpdate: data.lastLocationUpdate,
-                    roles: data.roles.map {
-                        .init(key: .init(rawValue: $0.key), name: $0.name)
-                    },
-                    permissions: data.permissions.map { .init(rawValue: $0) }
-                )
-            }
-
-        case .badRequest(_):
-            throw UserGateway.Error.unknown
-
-        case .unauthorized(_):
-            throw UserGateway.Error.unknown
-
-        case .forbidden(_):
-            throw UserGateway.Error.unknown
-
-        case .notFound(let notFoundResponse):
-            switch notFoundResponse.body {
-            case .json(let data):
-                if let error = ModuleError(data) {
-                    throw error
-                }
-            }
-            throw UserGateway.Error.unknown
-
-        case .unsupportedMediaType(_):
-            throw UserGateway.Error.unknown
-
-        case .unprocessableContent(let unprocessableContentResponse):
-            switch unprocessableContentResponse.body {
-            case .json(let data):
-                throw ValidatorError(data)
-            }
-
-        case .undocumented(_, _):
-            throw UserGateway.Error.unknown
-        }
-    }
-
-    func patch(
-        _ id: ID<User.Account>,
-        _ input: UserGateway.Account.Patch
-    ) async throws -> UserGateway.Account.Detail {
-        let ret =
-            try await accountClient.patchUserGatewayAccounts(
-                .init(
-                    path: .init(accountId: id.rawValue),
-                    body: .json(
-                        .init(
-                            email: input.email,
-                            password: input.password,
-                            roleKeys: input.roleKeys.map {
-                                $0.map { $0.rawValue }
-                            }
-                        )
-                    )
-                )
-            )
-
-        switch ret {
-        case .ok(let response):
-            switch response.body {
-            case .json(let data):
-                return .init(
-                    id: .init(rawValue: data.id),
-                    email: data.email,
-                    firstName: data.firstName,
-                    lastName: data.lastName,
-                    imageKey: data.imageKey,
-                    position: data.position,
-                    publicEmail: data.publicEmail,
-                    phone: data.phone,
-                    web: data.web,
-                    lat: data.lat,
-                    lon: data.lon,
-                    lastLocationUpdate: data.lastLocationUpdate,
-                    roles: data.roles.map {
-                        .init(key: .init(rawValue: $0.key), name: $0.name)
-                    },
-                    permissions: data.permissions.map { .init(rawValue: $0) }
-                )
-            }
-
-        case .badRequest(_):
-            throw UserGateway.Error.unknown
-
-        case .unauthorized(_):
-            throw UserGateway.Error.unknown
-
-        case .forbidden(_):
-            throw UserGateway.Error.unknown
-
-        case .notFound(let notFoundResponse):
-            switch notFoundResponse.body {
-            case .json(let data):
-                if let error = ModuleError(data) {
-                    throw error
-                }
-            }
-            throw UserGateway.Error.unknown
-
-        case .unsupportedMediaType(_):
-            throw UserGateway.Error.unknown
-
-        case .unprocessableContent(let unprocessableContentResponse):
-            switch unprocessableContentResponse.body {
-            case .json(let data):
-                throw ValidatorError(data)
-            }
-
-        case .undocumented(_, _):
-            throw UserGateway.Error.unknown
-        }
-    }
-
     func list(_ input: UserGateway.Account.List.Query) async throws
         -> UserGateway.Account.List
     {
